2003-04-28  Bernhard Held <bernhard@bernhardheld.de>

	* debugger/mcs51/cmd.c: added header newalloc.h

2003-04-26  Bernhard Held <bernhard@bernhardheld.de>

	* as/Makefile: new EXEEXT
	* as/z80/Makefile: remove trailing slash of BUILDIR
	* as/z80/clean.mk: new EXEEXT
	* Makefile.common.in: add to CFLAGS (and others), don't replace it
	* support/cpp2/Makefile.in: new EXEEXT
	* src/pic/glue.c (pic14emitRegularMap): fixed warning

2003-04-24  Bernhard Held <bernhard@bernhardheld.de>

	Cygwin's gcc always appends .exe: 'gcc -o a a.c' creates a.exe;
	EXEEXT was introduced to fix all related problems with targets
	"clean", "install" and "uninstall"; a couple of further flaws
	especially with "clean" have been fixed too
	* as/mcs51/Makefile.in
	* as/mcs51/clean.mk
	* as/z80/Makefile
	* Makefile
	* clean.mk
	* debugger/mcs51/Makefile.in
	* debugger/mcs51/clean.mk
	* link/z80/Makefile
	* link/z80/Makefile.in
	* link/z80/clean.mk
	* link/Makefile
	* packihx/Makefile.in
	* packihx/clean.mk
	* sim/ucsim/Makefile
	* sim/ucsim/clean.mk
	* sim/ucsim/avr.src/Makefile.in
	* sim/ucsim/avr.src/clean.mk
	* sim/ucsim/s51.src/Makefile.in
	* sim/ucsim/s51.src/clean.mk
	* sim/ucsim/xa.src/Makefile.in
	* sim/ucsim/xa.src/clean.mk
	* sim/ucsim/z80.src/Makefile.in
	* sim/ucsim/z80.src/clean.mk
	* sim/ucsim/main_in.mk
	* sim/ucsim/packages_in.mk
	* sim/ucsim/gui.src/Makefile.in
	* sim/ucsim/gui.src/serio.src/Makefile.in
	* sim/ucsim/gui.src/serio.src/clean.mk
	* src/Makefile.in
	* src/clean.mk
	* support/cpp2/Makefile.in
	* support/cpp2/clean.mk
	* support/makebin/Makefile
	* support/makebin/clean.mk
	* support/scripts/sdcc_mingw32: --program-suffix no longer needed
	* doc/sdccman.lyx: --program-suffix no longer needed

2003-04-23  Karl Bongers(apply patches for Martin Helmling)

	 * debugger/mcs51/sdcdb.c,simi.c,cmd.c,..
	 Martin Helmling added support for ddd GUI debugger.
	 Code added to display assembly, set variables, and other commands
	 to interface to ddd.
